--- a/ins-wisps-ai/pom.xml
+++ b/ins-wisps-ai/pom.xml
@@ -25,10 +25,10 @@
             <artifactId>ins-wisps-web2</artifactId>
         </dependency>
         <!-- cache -->
-        <dependency>
-            <groupId>com.wisps</groupId>
-            <artifactId>ins-wisps-cache</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.wisps</groupId>-->
+<!--            <artifactId>ins-wisps-cache</artifactId>-->
+<!--        </dependency>-->
         <!-- rpc -->
         <dependency>
             <groupId>com.wisps</groupId>
@@ -57,6 +57,24 @@
             <artifactId>spring-ai-starter-model-ollama</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <!-- chat memory -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud.ai</groupId>
+            <artifactId>spring-ai-alibaba-starter-memory-redis</artifactId>
+            <version>1.0.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>redis.clients</groupId>
+                    <artifactId>jedis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- 模版引擎 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
